--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -21,7 +21,7 @@
           display: flex;
           justify-content: center;
           list-style: none;
-          color: #7DA658;
+          color: $main-green;
           font-family: $font-skranji;
           opacity: 0.8;
 
