--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,20 +40,89 @@ body {
 }
 
 .startScreen {
+     display: flex;
+     justify-content: center;
+     align-content: center;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
-     width: 60%;
+     width: 80%;
      height: 60%;
-     background: black;
-     opacity: 0.3;
-     color: $main-orange;
+     background: rgba(0, 0, 0, 0.5);
+     opacity: 1;
+
+
+     .chooseScreen {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          font-family: $font-averia;
+
+          div>div {
+               color: white;
+               width: 100%;
+               height: 50px;
+               line-height: 50px;
+               text-align: center;
+
+          }
+
+          .arrow {
+               // border: 1px solid #ffffff33;
+               color: #ccc;
+               max-width: 70%;
+               height: 40px;
+               line-height: 40px;
+               transition: 0.1s;
+
+               &:hover {
+                    cursor: pointer;
+                    font-size: 25px;
+               }
+          }
+
+          .info_value {
+               margin-top: 4px;
+               opacity: 0.8;
+               height: 50px;
+               line-height: 40px;
+               text-align: center;
+               font-size: 14px;
+               letter-spacing: 1px;
+               color: $main-green;
+          }
+     }
+
+
+
+
+     .board-width,
+     .board-height,
+     .resolution,
+     .speed,
+     .elements {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          align-items: center;
+          padding-top: 10px;
+          width: 90px;
+          height: 150px;
+          // border: 1px solid rgba(255, 255, 255, 0.123);
+          margin: 10px;
+          border-radius: 10px;
+          box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.514);
+
+
+     }
+
 }
 
 #board {
 
-     // display: none;
+     display: none;
      position: absolute;
      top: 50%;
      left: 50%;
@@ -93,4 +162,38 @@ footer {
      transform: translate(-50%, 0);
      color: white;
      opacity: 0.5;
+}
+
+.hide {
+     animation-name: 'fadeOut';
+     animation-duration: 1s;
+     animation-iteration-count: 1;
+     animation-timing-function: ease-in-out;
+     animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+     0% {
+          opacity: 1;
+          filter: blur(0);
+     }
+
+     100% {
+          opacity: 0;
+          filter: blur(5px);
+     }
+}
+
+@keyframes change {
+     0% {
+          font-size: 16px;
+     }
+
+     50% {
+          font-size: 20px;
+     }
+
+     100% {
+          font-size: 16px;
+     }
 }
