--- a/src/scss/_control.scss
+++ b/src/scss/_control.scss
@@ -1,6 +1,6 @@
 .control {
      // display: none;
-     position: fixed;
+     position: absolute;
      bottom: 40px;
      left: 50%;
      transform: translate(-50%, -50%);
