--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,14 +19,14 @@
 
 body {
      background: #1d1d1d;
-     background: #0a152e;
+     background: $main-blue;
      color: #ffb14a;
 }
 
 .wrapper {
      position: relative;
      min-width: 1200px;
-     min-height: 800px;
+     height: 100vh;
      margin: 0 auto;
 }
 
@@ -49,24 +49,29 @@ body {
      transform: translate(-50%, -50%);
      width: 80%;
      height: 60%;
-     background: rgba(0, 0, 0, 0.5);
+     // background: rgba(255, 255, 255, 0.11);
      opacity: 1;
+
+
+
+
 
 
      .chooseScreen {
           display: flex;
+          margin: -100px 0 0 0;
           justify-content: center;
           align-items: center;
           width: 100%;
           font-family: $font-averia;
 
           div>div {
-               color: white;
+               color: $main-green;
                width: 100%;
                height: 50px;
                line-height: 50px;
                text-align: center;
-
+               font-weight: bold;
           }
 
           .arrow {
@@ -79,7 +84,7 @@ body {
 
                &:hover {
                     cursor: pointer;
-                    font-size: 25px;
+                    font-size: 20px;
                }
           }
 
@@ -110,12 +115,36 @@ body {
           padding-top: 10px;
           width: 90px;
           height: 150px;
-          // border: 1px solid rgba(255, 255, 255, 0.123);
           margin: 10px;
           border-radius: 10px;
           box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.514);
+     }
 
+     .infoPage {
+          position: absolute;
+          bottom: 20px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 120px;
+          margin: 0 10px;
+          color: orange;
+          opacity: 0.4;
+          font-size: 40px;
+          letter-spacing: 2px;
+          transition: 0.1s;
+          transform: scale(1);
 
+          span {
+               width: 100px;
+               margin: 0 10px;
+               font-size: 30px;
+          }
+
+          &:hover {
+               cursor: pointer;
+               opacity: 1;
+          }
      }
 
 }
@@ -129,7 +158,6 @@ body {
      transform: translate(-50%, -50%);
      margin: 0 auto;
      opacity: 1;
-     // border: 1px solid orange;
      @include clearFix();
 
      div {
@@ -156,7 +184,7 @@ body {
 footer {
      text-align: center;
      font-family: $font-carter;
-     position: fixed;
+     position: absolute;
      bottom: 10px;
      left: 50%;
      transform: translate(-50%, 0);
@@ -172,6 +200,9 @@ footer {
      animation-fill-mode: forwards;
 }
 
+
+
+
 @keyframes fadeOut {
      0% {
           opacity: 1;
@@ -181,19 +212,5 @@ footer {
      100% {
           opacity: 0;
           filter: blur(5px);
-     }
-}
-
-@keyframes change {
-     0% {
-          font-size: 16px;
-     }
-
-     50% {
-          font-size: 20px;
-     }
-
-     100% {
-          font-size: 16px;
      }
 }
